styles/gpa-calculator.css
body {
  margin: 0;
  font-family: Arial, Helvetica, sans-serif;
}

nav {
  background-color: blue;
  padding: 10px 5px;
  display: flex;
  justify-content: space-between;
}

nav a {
  color: white;
  text-decoration: none;
  font-weight: bold;
}

main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

form {
  border: 2px solid blue;
  border-radius: 10px;
  padding: 20px;
  margin: 20px;
  display: flex;
  flex-direction: column;
  gap: 10px;
  width: 70%;
  max-width: 800px;
}

.right-nav-section {
  display: flex;
  gap: 10px;
  align-items: center;
}

.logo {
  width: 50px;
  border-radius: 25px;
}

.form-container {
  display: grid;
  grid-template-rows: auto auto auto auto;
  gap: 10px;
}

.form-row {
  display: grid;
  grid-template-columns: 120px 1fr;
  align-items: center;
}

.buttons-container {
  width: 100%;
  display: flex;
  justify-content: space-around;
}

button {
  color: white;
  font-weight: bold;
  border: none;
  border-radius: 5px;
  padding: 5px 10px;
}

.add-course-button {
  background-color: blue;
}

.calculate-button {
  background-color: lime;
}

